@startuml

title __COUPLING's Class Diagram__\n

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.Car {
        + move()
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.Cart {
        + items : LineItem[]
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.LineItem {
        + price : float
        + quantity : int
        - itemName : String
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.Order {
        - salesTax : float
        + Order()
        + orderTotalPrice()
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.Test {
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.TightCouplingTraveler {
        {static} + main()
    }
  }
  

  namespace com.ion.training.oops.coupling {
    class com.ion.training.oops.coupling.Traveler {
        + startJourney()
    }
  }
  

  com.ion.training.oops.coupling.Order o-- com.ion.training.oops.coupling.Cart : cart
  com.ion.training.oops.coupling.Traveler o-- com.ion.training.oops.coupling.Car : c


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
